--- a/views/user/register.html
+++ b/views/user/register.html
@@ -1,133 +1,146 @@
-
-
-
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <title>注册 - {{theme}}</title>
-  <meta name="renderer" content="webkit">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <link rel="stylesheet" href="//cdn.junn.top/layui/2.4.3/css/layui.css">
-  <link rel="stylesheet" href="/css/admin.css">
-  <link rel="stylesheet" href="/css/login.css" media="all">
+    <meta charset="utf-8">
+    <title>注册 - {{theme}}</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <link rel="stylesheet" href="//cdn.junn.top/layui/2.4.3/css/layui.css">
+    <link rel="stylesheet" href="/css/admin.css">
+    <link rel="stylesheet" href="/css/login.css" media="all">
 </head>
+
 <body>
 
-  <div class="layadmin-user-login layadmin-user-display-show" id="LAY-user-login" style="display: none;">
-    <div class="layadmin-user-login-main">
-      <div class="layadmin-user-login-box layadmin-user-login-header">
-        <h2>{{theme}}</h2>
-        <!-- <p>layui 官方出品的单页面后台管理模板系统</p> -->
-      </div>
-      <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
-        <div class="layui-form-item">
-          <label class="layadmin-user-login-icon layui-icon layui-icon-cellphone" for="LAY-user-login-cellphone"></label>
-          <input type="text" name="cellphone" id="LAY-user-login-cellphone" lay-verify="phone" placeholder="手机" class="layui-input">
-        </div>
-        <div class="layui-form-item">
-          <div class="layui-row">
-            <div class="layui-col-xs7">
-              <label class="layadmin-user-login-icon layui-icon layui-icon-vercode" for="LAY-user-login-vercode"></label>
-              <input type="text" name="vercode" id="LAY-user-login-vercode" lay-verify="required" placeholder="验证码" class="layui-input">
+    <div class="layadmin-user-login layadmin-user-display-show" id="LAY-user-login" style="display: none;">
+        <div class="layadmin-user-login-main">
+            <div class="layadmin-user-login-box layadmin-user-login-header">
+                <h2>{{theme}}</h2>
+                <!-- <p>layui 官方出品的单页面后台管理模板系统</p> -->
             </div>
-            <div class="layui-col-xs5">
-              <div style="margin-left: 10px;">
-                <button type="button" class="layui-btn layui-btn-primary layui-btn-fluid" id="LAY-user-getsmscode">获取验证码</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="layui-form-item">
-          <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-password"></label>
-          <input type="password" name="password" id="LAY-user-login-password" lay-verify="pass" placeholder="密码" class="layui-input">
-        </div>
-        <div class="layui-form-item">
-          <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-repass"></label>
-          <input type="password" name="repass" id="LAY-user-login-repass" lay-verify="required" placeholder="确认密码" class="layui-input">
-        </div>
-        <div class="layui-form-item">
-          <label class="layadmin-user-login-icon layui-icon layui-icon-username" for="LAY-user-login-nickname"></label>
-          <input type="text" name="nickname" id="LAY-user-login-nickname" lay-verify="nickname" placeholder="昵称" class="layui-input">
-        </div>
-        <!-- <div class="layui-form-item">
+            <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
+                <div class="layui-form-item">
+                    <label class="layadmin-user-login-icon layui-icon layui-icon-username" for="LAY-user-login-nickname"></label>
+                    <input type="text" name="username" id="LAY-user-login-nickname" lay-verify="nickname" placeholder="用户名"
+                        class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <div class="layui-row">
+                        <div class="layui-col-xs7">
+                            <label class="layadmin-user-login-icon layui-icon layui-icon-vercode" for="LAY-user-login-vercode"></label>
+                            <input type="text" name="captcha" id="LAY-user-login-vercode" lay-verify="required"
+                                placeholder="验证码" class="layui-input">
+                        </div>
+                        <div class="layui-col-xs5">
+                            <div style="margin-left: 10px;">
+                                <div style="border: 1px solid #e6e6e6; border-radius: 2px; background: #fff;
+                height: 38px;
+                box-sizing: border-box;
+                display: flex;
+                align-items: center;
+            ">
+                                    <img class="captcha" src="/tools/captcha" alt="" id="captcha" title="点击刷新验证码" style="max-width: 100%;cursor: pointer;">
+                                </div>
+                                <!-- <button type="button" class="layui-btn layui-btn-primary layui-btn-fluid" id="LAY-user-getsmscode">获取验证码</button> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-password"></label>
+                    <input type="password" name="password" id="LAY-user-login-password" lay-verify="pass" placeholder="密码"
+                        class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-repass"></label>
+                    <input type="password" name="repass" id="LAY-user-login-repass" lay-verify="required" placeholder="确认密码"
+                        class="layui-input">
+                </div>
+                <!-- <div class="layui-form-item">
           <input type="checkbox" name="agreement" lay-skin="primary" title="同意用户协议" checked>
         </div> -->
-        <div class="layui-form-item">
-          <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="LAY-user-reg-submit">注 册</button>
-        </div>
-        <div class="layui-trans layui-form-item layadmin-user-login-other">
-          <!-- <label>社交账号注册</label>
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="LAY-user-reg-submit" type="submit">注 册</button>
+                </div>
+                <div class="layui-trans layui-form-item layadmin-user-login-other">
+                    <!-- <label>社交账号注册</label>
           <a href="javascript:;"><i class="layui-icon layui-icon-login-qq"></i></a>
           <a href="javascript:;"><i class="layui-icon layui-icon-login-wechat"></i></a>
           <a href="javascript:;"><i class="layui-icon layui-icon-login-weibo"></i></a> -->
-        
-          <a href="login.html" class="layadmin-user-jump-change layadmin-link layui-hide-xs">用已有帐号登入</a>
-          <a href="login.html" class="layadmin-user-jump-change layadmin-link layui-hide-sm layui-show-xs-inline-block">登入</a>
+
+                    <a href="login.html" class="layadmin-user-jump-change layadmin-link layui-hide-xs">用已有帐号登入</a>
+                    <a href="login.html" class="layadmin-user-jump-change layadmin-link layui-hide-sm layui-show-xs-inline-block">登入</a>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    
-    <div class="layui-trans layadmin-user-login-footer">
-      
-      <p>© 2018 <a href="http://www.layui.com/" target="_blank">{{theme}}</a></p>
-      <p>
-        <!-- <span><a href="http://www.layui.com/admin/#get" target="_blank">获取授权</a></span>
+
+        <div class="layui-trans layadmin-user-login-footer">
+
+            <p>© 2018 <a href="http://www.layui.com/" target="_blank">{{theme}}</a></p>
+            <p>
+                <!-- <span><a href="http://www.layui.com/admin/#get" target="_blank">获取授权</a></span>
         <span><a href="http://www.layui.com/admin/pro/" target="_blank">在线演示</a></span>
         <span><a href="http://www.layui.com/admin/" target="_blank">前往官网</a></span> -->
-      </p>
+            </p>
+        </div>
+
     </div>
 
-  </div>
+    <script src="//cdn.junn.top/layui/2.4.3/layui.js"></script>
+    <script>
+        layui.config({
+            base: '/' //静态资源所在路径
+        }).extend({
+            index: 'js/lib/index' //主入口模块
+        }).use(['index', 'user'], function () {
+            var $ = layui.$
+                , setter = layui.setter
+                , admin = layui.admin
+                , form = layui.form
+                , router = layui.router();
 
-  <script src="//cdn.junn.top/layui/2.4.3/layui.js"></script>
-  <script>
-  layui.config({
-    base: '/' //静态资源所在路径
-  }).extend({
-    index: 'js/lib/index' //主入口模块
-  }).use(['index', 'user'], function(){
-    var $ = layui.$
-    ,setter = layui.setter
-    ,admin = layui.admin
-    ,form = layui.form
-    ,router = layui.router();
+            form.render();
+            // 刷新验证码
+            $('.captcha').click(function (e) {
+                var target = $(e.target)
+                target.attr('src', '/tools/captcha?v=' + Date.now())
+            })
+            //提交
+            form.on('submit(LAY-user-reg-submit)', function (obj) {
+                var field = obj.field;
 
-    form.render();
+                //确认密码
+                if (field.password !== field.repass) {
+                    return layer.msg('两次密码输入不一致');
+                }
 
-    //提交
-    form.on('submit(LAY-user-reg-submit)', function(obj){
-      var field = obj.field;
-      
-      //确认密码
-      if(field.password !== field.repass){
-        return layer.msg('两次密码输入不一致');
-      }
-      
-      //是否同意用户协议
-      if(!field.agreement){
-        return layer.msg('你必须同意用户协议才能注册');
-      }
-      
-      //请求接口
-      admin.req({
-        url: layui.setter.base + 'json/user/reg.js' //实际使用请改成服务端真实接口
-        ,data: field
-        ,done: function(res){        
-          layer.msg('注册成功', {
-            offset: '15px'
-            ,icon: 1
-            ,time: 1000
-          }, function(){
-            location.hash = '/user/login'; //跳转到登入页
-          });
-        }
-      });
-      
-      return false;
-    });
-  });
-  </script>
+                // //是否同意用户协议
+                // if (!field.agreement) {
+                //     return layer.msg('你必须同意用户协议才能注册');
+                // }
+
+                //请求接口
+                admin.req({
+                    url: '/api/users/register', //实际使用请改成服务端真实接口
+                    type: 'post'
+                    , data: field
+                    , success: function (res) {
+                        layer.msg('注册成功', {
+                            offset: '15px'
+                            , icon: 1
+                            , time: 1000
+                        }, function () {
+                            location.href = '/user/login.html'; //跳转到登入页
+                        });
+                    }
+                });
+
+                return false;
+            });
+        });
+    </script>
 </body>
+
 </html>
