--- a/views/index.html
+++ b/views/index.html
@@ -53,7 +53,7 @@
                     </li>
                     <li class="layui-nav-item" lay-unselect="">
                         <a href="javascript:;">
-                            <cite>贤心</cite>
+                            <cite>{{user.username}} {% if user.typeName %}【{{user.typeName}}】{%endif%}</cite>
                             <span class="layui-nav-more"></span></a>
                         <dl class="layui-nav-child">
                             <dd><a lay-href="set/user/info.html">基本资料</a></dd>
