--- a/views/index.html
+++ b/views/index.html
@@ -13,11 +13,11 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                         <i class="layui-icon layui-icon-shrink-right" id="LAY_app_flexible"></i>
                     </a>
                 </li>
-                <li class="layui-nav-item layui-hide-xs" lay-unselect="">
+                <!-- <li class="layui-nav-item layui-hide-xs" lay-unselect="">
                     <a href="http://www.layui.com/admin/" target="_blank" title="前台">
                         <i class="layui-icon layui-icon-website"></i>
                     </a>
-                </li>
+                </li> -->
                 <li class="layui-nav-item" lay-unselect="">
                     <a href="javascript:;" layadmin-event="refresh" title="刷新">
                         <i class="layui-icon layui-icon-refresh-3"></i>
@@ -29,24 +29,23 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                 </li>
             </ul>
             <ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
-
                 <li class="layui-nav-item" lay-unselect="">
-                    <a lay-href="app/message/index.html" layadmin-event="message" lay-text="消息中心">
+                    <a lay-href="app/message/index.html" layadmin-event="message" lay-text="消息中心" title="消息中心">
                         <i class="layui-icon layui-icon-notice"></i>
                         <!-- 如果有新消息，则显示小圆点 -->
-                        <span class="layui-badge-dot"></span>
+                        <!-- <span class="layui-badge-dot"></span> -->
                     </a>
                 </li>
-                <li class="layui-nav-item layui-hide-xs" lay-unselect="">
+                <li class="layui-nav-item layui-hide-xs" lay-unselect="" title="主题切换">
                     <a href="javascript:;" layadmin-event="theme">
                         <i class="layui-icon layui-icon-theme"></i>
                     </a>
                 </li>
-                <li class="layui-nav-item layui-hide-xs" lay-unselect="">
+                <!-- <li class="layui-nav-item layui-hide-xs" lay-unselect="">
                     <a href="javascript:;" layadmin-event="note">
                         <i class="layui-icon layui-icon-note"></i>
                     </a>
-                </li>
+                </li> -->
                 <li class="layui-nav-item layui-hide-xs" lay-unselect="">
                     <a href="javascript:;" layadmin-event="fullscreen">
                         <i class="layui-icon layui-icon-screen-full"></i>
@@ -63,7 +62,7 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                         <dd layadmin-event="logout" style="text-align: center;"><a>退出</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item layui-hide-xs" lay-unselect="">
+                <li class="layui-nav-item layui-hide-xs" lay-unselect=""  title="系统说明">
                     <a href="javascript:;" layadmin-event="about"><i class="layui-icon layui-icon-more-vertical"></i></a>
                 </li>
                 <li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-unselect="">
@@ -80,7 +79,7 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                 </div>
 
                 <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu" lay-filter="layadmin-system-side-menu">
-                    <li data-name="home" class="layui-nav-item layui-nav-itemed">
+                    <!-- <li data-name="home" class="layui-nav-item layui-nav-itemed">
                         <a href="javascript:;" lay-tips="主页" lay-direction="2">
                             <i class="layui-icon layui-icon-home"></i>
                             <cite>主页</cite>
@@ -96,7 +95,7 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                                 <a lay-href="home/homepage2.html">主页二</a>
                             </dd>
                         </dl>
-                    </li>
+                    </li> -->
                     <li data-name="home" class="layui-nav-item">
                         <a href="javascript:;" lay-tips="测试" lay-direction="2">
                             <i class="layui-icon layui-icon-home"></i>
