推荐人配置

--- a/views/index.html
+++ b/views/index.html
@@ -106,7 +106,7 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                                 <a lay-href="/cost/costList.html">费用配置</a>
                             </dd>
                             <dd data-name="costList" class="">
-                                <a lay-href="/cost/costList.html">推荐人配置</a>
+                                <a lay-href="/referrer/referrerList.html">推荐人配置</a>
                             </dd>
                             <dd data-name="costList" class="">
                                 <a lay-href="/cost/costList.html">报名点配置</a>
