--- a/views/cost/costList.html
+++ b/views/cost/costList.html
@@ -112,6 +112,9 @@
             elem: "#LAY-app-content-list",
             url: "/api/costs",
             parseData: function (res) { //res 即为原始返回的数据
+                res.data.forEach(function (item) {
+                    item.createdAt = layui.util.timeAgo(item.createdAt, true)
+                })
                 return {
                     "code": 0, //解析接口状态
                     "msg": '', //解析提示文本
@@ -144,7 +147,7 @@
                     },
                     {
                         field: "createdAt",
-                        title: "上传时间",
+                        title: "创建时间",
                         sort: !0
                     },
                     {
