--- a/views/cost/costList.html
+++ b/views/cost/costList.html
@@ -152,7 +152,7 @@
                     },
                     {
                         field: "status",
-                        title: "发布状态",
+                        title: "状态",
                         templet: "#buttonTpl",
                         minWidth: 80,
                         align: "center"
