--- a/views/regPoint/regPointList.html
+++ b/views/regPoint/regPointList.html
@@ -77,7 +77,7 @@
                         })
                         admin.req({
                             type: 'DELETE',
-                            url: '/api/referrers?ids=' + ids.join(','),
+                            url: '/api/regPoints?ids=' + ids.join(','),
                             success: function (res) {
                                 table.reload('LAY-app-content-list');
                                 layer.msg('已删除');
@@ -88,8 +88,8 @@
                 add: function () {
                     layer.open({
                         type: 2,
-                        title: '添加推荐人',
-                        content: '/referrer/referrerForm.html',
+                        title: '添加报名点',
+                        content: '/regPoint/regPointForm.html',
                         maxmin: true,
                         area: ['550px', '550px'],
                         btn: ['确定', '取消'],
@@ -110,7 +110,7 @@
 
         table.render({
             elem: "#LAY-app-content-list",
-            url: "/api/referrers",
+            url: "/api/regPoints",
             parseData: function (res) { //res 即为原始返回的数据
                 res.data.forEach(function (item) {
                     item.createdAt = layui.util.timeAgo(item.createdAt, true)
@@ -142,7 +142,7 @@
                     },
                     {
                         field: "createdAt",
-                        title: "上传时间",
+                        title: "创建时间",
                         sort: !0
                     },
                     {
@@ -171,17 +171,17 @@
         table.on("tool(LAY-app-content-list)",
             function (obj) {
                 var data = obj.data;
-                "del" === obj.event ? layer.confirm("确定删除此推荐人？", function (index) {
+                "del" === obj.event ? layer.confirm("确定删除此报名点？", function (index) {
                     admin.req({
                         type: 'delete',
-                        url: '/api/referrers/' + data._id
+                        url: '/api/regPoints/' + data._id
                     })
                     obj.del()
                     layer.close(index)
                 }) : "edit" === obj.event && layer.open({
                     type: 2,
-                    title: "编辑推荐人",
-                    content: "/referrer/referrerForm.html?id=" + data._id,
+                    title: "编辑报名点",
+                    content: "/regPoint/regPointForm.html?id=" + data._id,
                     maxmin: !0,
                     area: ["550px", "550px"],
                     btn: ["确定", "取消"],
@@ -194,7 +194,7 @@
                                 var field = sonObj.field;
                                 admin.req({
                                     type: 'put',
-                                    url: '/api/referrers/' + data._id,
+                                    url: '/api/regPoints/' + data._id,
                                     data: field,
                                     success: function (res) {
                                         obj.update(layui.$.extend({}, field));
