--- a/views/index.html
+++ b/views/index.html
@@ -112,7 +112,7 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                                 <a lay-href="/regPoint/regPointList.html">报名点配置</a>
                             </dd>
                             <dd data-name="costList" class="">
-                                <a lay-href="/cost/costList.html">班型配置</a>
+                                <a lay-href="/classType/classTypeList.html">班型配置</a>
                             </dd>
                             <dd data-name="costList" class="">
                                 <a lay-href="/cost/costList.html">校区配置</a>
