--- a/views/index.html
+++ b/views/index.html
@@ -115,7 +115,7 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                                 <a lay-href="/classType/classTypeList.html">班型配置</a>
                             </dd>
                             <dd data-name="costList" class="">
-                                <a lay-href="/cost/costList.html">校区配置</a>
+                                <a lay-href="/campus/campusList.html">校区配置</a>
                             </dd>
                             <dd data-name="costList" class="">
                                 <a lay-href="/cost/costList.html">支付方式配置</a>
