责任人配置

--- a/views/index.html
+++ b/views/index.html
@@ -62,7 +62,7 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                         <dd layadmin-event="logout" style="text-align: center;"><a>退出</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item layui-hide-xs" lay-unselect=""  title="系统说明">
+                <li class="layui-nav-item layui-hide-xs" lay-unselect="" title="系统说明">
                     <a href="javascript:;" layadmin-event="about"><i class="layui-icon layui-icon-more-vertical"></i></a>
                 </li>
                 <li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-unselect="">
@@ -105,26 +105,26 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                             <dd data-name="costList" class="">
                                 <a lay-href="/cost/costList.html">费用配置</a>
                             </dd>
-                            <dd data-name="costList" class="">
+                            <dd data-name="referrerList" class="">
                                 <a lay-href="/referrer/referrerList.html">推荐人配置</a>
                             </dd>
-                            <dd data-name="costList" class="">
+                            <dd data-name="regPointList" class="">
                                 <a lay-href="/regPoint/regPointList.html">报名点配置</a>
                             </dd>
-                            <dd data-name="costList" class="">
+                            <dd data-name="classTypeList" class="">
                                 <a lay-href="/classType/classTypeList.html">班型配置</a>
                             </dd>
-                            <dd data-name="costList" class="">
+                            <dd data-name="campusList" class="">
                                 <a lay-href="/campus/campusList.html">校区配置</a>
                             </dd>
-                            <dd data-name="costList" class="">
+                            <dd data-name="payTypeList" class="">
                                 <a lay-href="/payType/payTypeList.html">支付方式配置</a>
                             </dd>
                             <dd data-name="costList" class="">
-                                <a lay-href="/cost/costList.html">责任人配置</a>
+                                <a lay-href="/responsible/responsibleList.html">责任人配置</a>
                             </dd>
-                            <dd data-name="costList" class="">
-                                <a lay-href="/cost/costList.html">消息通知</a>
+                            <dd data-name="responsibleList" class="">
+                                <a lay-href="/responsible/responsibleList.html">消息通知</a>
                             </dd>
                             <dd data-name="costList" class="">
                                 <a lay-href="/cost/costList.html">操作员管理</a>
