--- a/views/index.html
+++ b/views/index.html
@@ -123,8 +123,8 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                             <dd data-name="costList" class="">
                                 <a lay-href="/responsible/responsibleList.html">责任人配置</a>
                             </dd>
-                            <dd data-name="responsibleList" class="">
-                                <a lay-href="/responsible/responsibleList.html">消息通知</a>
+                            <dd data-name="messageList" class="">
+                                <a lay-href="/message/messageList.html">消息通知</a>
                             </dd>
                             <dd data-name="costList" class="">
                                 <a lay-href="/cost/costList.html">操作员管理</a>
