--- a/views/index.html
+++ b/views/index.html
@@ -141,7 +141,7 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                                 <a lay-href="user/user/list.html">管理员</a>
                             </dd>
                             <dd>
-                                <a lay-href="user/administrators/list.html">菜单管理</a>
+                                <a lay-href="/menu/menuList.html">菜单管理</a>
                             </dd>
                             <dd>
                                 <a lay-href="user/administrators/role.html">角色管理</a>
