--- a/views/template/layout2.html
+++ b/views/template/layout2.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="//cdn.junn.top/layui/2.4.3/css/layui.css">
+    <link rel="stylesheet" href="/css/append.css">
 </head>
 <body {% block bodyAttr %}{% endblock %}>
 
