自动注册路由到菜单列表中

--- a/views/menu/menuList.html
+++ b/views/menu/menuList.html
@@ -160,6 +160,11 @@
                         sort: !0
                     },
                     {
+                        field: "num",
+                        title: "访问次数",
+                        sort: !0
+                    },
+                    {
                         field: "type",
                         title: "类型",
                         sort: !0
