--- a/views/menu/menuForm.html
+++ b/views/menu/menuForm.html
@@ -9,9 +9,9 @@
         </div>
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label required">名称</label>
+        <label class="layui-form-label">名称</label>
         <div class="layui-input-inline">
-            <input type="text" name="name" lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input"
+            <input type="text" name="name" lay-verify="" placeholder="请输入名称" autocomplete="off" class="layui-input"
                 value="{{menu.name}}">
         </div>
     </div>
