--- a/views/menu/menuList.html
+++ b/views/menu/menuList.html
@@ -11,6 +11,16 @@
                     </div>
                 </div>
                 <div class="layui-inline">
+                    <label class="layui-form-label">类型</label>
+                    <div class="layui-input-inline">
+                        <select name="type" lay-verify="required">
+                            <option value="">全部</option>
+                            <option value="page">页面</option>
+                            <option value="api">接口</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="layui-inline">
                     <button class="layui-btn layuiadmin-btn-list" lay-submit lay-filter="LAY-app-contlist-search">
                         <i class="layui-icon layui-icon-search layuiadmin-button-btn"></i>
                     </button>
@@ -134,6 +144,7 @@
                     {
                         field: "sign",
                         title: "标识",
+                        minWidth: 200,
                         sort: !0
                     },
                     {
@@ -144,6 +155,7 @@
                     {
                         field: "name",
                         title: "名称",
+                        edit: 'text',
                         sort: !0
                     },
                     {
@@ -195,6 +207,17 @@
             limit: 10,
             limits: [10, 15, 20, 25, 30]
         })
+        table.on('edit(LAY-app-content-list)', function (obj) {
+            var data = obj.data
+            admin.req({
+                type: 'put',
+                url: '/api/menus/' + data._id,
+                data: data,
+                success: function (res) {
+                    layer.msg('保存成功', {icon: 6, offset: 'rb'})
+                }
+            })
+        });
         table.on("tool(LAY-app-content-list)",
             function (obj) {
                 var data = obj.data
