接口标识添加 方法类型

--- a/views/menu/menuList.html
+++ b/views/menu/menuList.html
@@ -13,7 +13,7 @@
                 <div class="layui-inline">
                     <label class="layui-form-label">类型</label>
                     <div class="layui-input-inline">
-                        <select name="type" lay-verify="required">
+                        <select name="type" lay-verify="">
                             <option value="">全部</option>
                             <option value="page">页面</option>
                             <option value="api">接口</option>
