--- a/views/user/login.html
+++ b/views/user/login.html
@@ -58,7 +58,8 @@
           <a href="forget.html" class="layadmin-user-jump-change layadmin-link" style="margin-top: 7px;">忘记密码？</a>
         </div> -->
                 <div class="layui-form-item">
-                    <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="LAY-user-login-submit" type="submit">登 入</button>
+                    <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="LAY-user-login-submit" type="submit">登
+                        入</button>
                 </div>
                 <div class="layui-trans layui-form-item layadmin-user-login-other">
                     <!-- <label>社交账号登入</label>
@@ -98,33 +99,32 @@
 
     <script src="//cdn.junn.top/layui/2.4.3/layui.js"></script>
     <script>
+        top.LOGOUT && top.LOGOUT()
         layui.config({
             base: '/' //静态资源所在路径
         }).extend({
             index: 'js/lib/index' //主入口模块
         }).use(['index', 'user'], function () {
-            var $ = layui.$
-                , setter = layui.setter
-                , admin = layui.admin
-                , form = layui.form
-                , router = layui.router()
-                , search = router.search;
-
+            var $ = layui.$,
+                setter = layui.setter,
+                admin = layui.admin,
+                form = layui.form,
+                router = layui.router(),
+                search = router.search;
             form.render();
-
             //提交
             form.on('submit(LAY-user-login-submit)', function (obj) {
                 //请求登入接口
                 admin.req({
                     url: '/api/users/login', //实际使用请改成服务端真实接口
-                    type: 'post'
-                    , data: obj.field
-                    , success: function (res) {
+                    type: 'post',
+                    data: obj.field,
+                    success: function (res) {
                         //登入成功的提示与跳转
                         layer.msg('登入成功', {
-                            offset: '15px'
-                            , icon: 1
-                            , time: 1000
+                            offset: '15px',
+                            icon: 1,
+                            time: 1000
                         }, function () {
                             location.href = '/'; //后台主页
                         });
@@ -132,13 +132,11 @@
                 });
                 return false
             });
-
             //实际使用时记得删除该代码
             // layer.msg('为了方便演示，用户名密码可随意输入', {
             //   offset: '15px'
             //   ,icon: 1
             // });
-
         });
     </script>
 </body>
