列表数据绑定相应管理员

--- a/views/user/adminForm.html
+++ b/views/user/adminForm.html
@@ -12,7 +12,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">密码</label>
         <div class="layui-input-inline">
-            <input type="password" name="password" lay-verify="required" placeholder="重置密码" autocomplete="off" class="layui-input"
+            <input type="password" name="password" lay-verify="" placeholder="重置密码" autocomplete="off" class="layui-input"
                 value="">
         </div>
     </div>
