--- a/views/user/adminForm.html
+++ b/views/user/adminForm.html
@@ -8,6 +8,13 @@
                 value="{{userData.username}}">
         </div>
     </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">子域名</label>
+        <div class="layui-input-inline">
+            <input type="text" name="area" lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input"
+                value="{{userData.area}}">
+        </div>
+    </div>
     {% if userData.username %}
     <div class="layui-form-item">
         <label class="layui-form-label">密码</label>
