菜单路由配置权限

--- a/views/user/adminForm.html
+++ b/views/user/adminForm.html
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label">子域名</label>
+        <label class="layui-form-label">二级域名</label>
         <div class="layui-input-inline">
             <input type="text" name="area" lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input"
                 value="{{userData.area}}">
