--- a/views/user/adminList.html
+++ b/views/user/adminList.html
@@ -136,6 +136,11 @@
                         sort: !0
                     },
                     {
+                        field: "area",
+                        title: "二级域名",
+                        sort: !0
+                    },
+                    {
                         field: "remark",
                         title: "备注",
                         sort: !0
