--- a/views/template/layout.html
+++ b/views/template/layout.html
@@ -14,6 +14,7 @@
 <body {% block bodyAttr %}{% endblock %}>
 
 {% block content %}{% endblock %}
+<script src="//cdn.junn.top/jquery/3.3.1/jquery.min.js"></script>
 <script src="//cdn.junn.top/layui/2.4.3/layui.js"></script>
 {% block script %}{% endblock %}
 </body>
