--- a/views/template/layout2.html
+++ b/views/template/layout2.html
@@ -8,10 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="//cdn.junn.top/layui/2.4.3/css/layui.css">
     <link rel="stylesheet" href="/css/append.css">
+    {% block link %}{% endblock %}
 </head>
 <body {% block bodyAttr %}{% endblock %}>
 
 {% block content %}{% endblock %}
+<script src="//cdn.junn.top/jquery/3.3.1/jquery.min.js"></script>
 <script src="//cdn.junn.top/layui/2.4.3/layui.js"></script>
 {% block script %}{% endblock %}
 </body>
